# public/swagger.json
@@ -19,6 +19,102 @@
         "http"
     ],
     "paths": {
+        "/api/areas/getprovince": {
+            "get": {
+                "tags": [
+                    "5-\u5730\u533a\u90e8\u5206\u63a5\u53e3"
+                ],
+                "summary": "4.1-\u83b7\u53d6\u7701\u4efd\u4fe1\u606f",
+                "description": "\u83b7\u53d6\u7701\u4efd\u4fe1\u606f(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)",
+                "operationId": "getprovince",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JSON\u683c\u5f0f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:getprovince",
+                            "read:getprovince"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/api/areas/getcity?proviceid=110000": {
+            "get": {
+                "tags": [
+                    "5-\u5730\u533a\u90e8\u5206\u63a5\u53e3"
+                ],
+                "summary": "4.2-\u6839\u636e\u7701id\u83b7\u53d6\u5e02\u4fe1\u606f",
+                "description": "\u83b7\u53d6\u5e02\u4fe1\u606f(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)",
+                "operationId": "getcity",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JSON\u683c\u5f0f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:getcity",
+                            "read:getcity"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/api/areas/getarea?cityid=110900": {
+            "get": {
+                "tags": [
+                    "5-\u5730\u533a\u90e8\u5206\u63a5\u53e3"
+                ],
+                "summary": "4.3-\u6839\u636e\u5e02id\u83b7\u53d6\u5730\u533a\u4fe1\u606f",
+                "description": "\u83b7\u53d6\u5730\u533a\u4fe1\u606f(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)",
+                "operationId": "getarea",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JSON\u683c\u5f0f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:getarea",
+                            "read:getarea"
+                        ]
+                    }
+                ]
+            }
+        },
         "/api/Config/info": {
             "get": {
                 "tags": [
@@ -46,6 +142,100 @@
                         "petstore_auth": [
                             "write:info",
                             "read:info"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/api/Upload/uploadimg": {
+            "post": {
+                "tags": [
+                    "4-\u4e0a\u4f20\u56fe\u7247\u63a5\u53e3"
+                ],
+                "summary": "4.1-\u6dfb\u52a0\u56fe\u7247",
+                "description": "\u6dfb\u52a0\u56fe\u7247(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)\u3002",
+                "operationId": "uploadimg",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Json\u683c\u5f0f",
+                        "required": true,
+                        "schema": {
+                            "example": {
+                                "img64": "base64\u4f4d\u56fe\u7247"
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6dfb\u52a0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:uploadimg",
+                            "read:uploadimg"
+                        ]
+                    }
+                ]
+            }
+        },
+        "/api/User/add": {
+            "post": {
+                "tags": [
+                    "1-\u7528\u6237\u7ba1\u7406\u90e8\u5206\u63a5\u53e3"
+                ],
+                "summary": "1.1-\u6dfb\u52a0\u7528\u6237",
+                "description": "\u6dfb\u52a0\u7528\u6237(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)\u3002",
+                "operationId": "add",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Json\u683c\u5f0f",
+                        "required": true,
+                        "schema": {
+                            "example": {
+                                "username": "\u7528\u6237\u59d3\u540d",
+                                "openid": "\u5c0f\u7a0b\u5e8f\u83b7\u53d6\u7684openid",
+                                "mobileno": "\u5c0f\u7a0b\u5e8f\u83b7\u53d6\u5230\u7684\u7528\u6237\u624b\u673a\u53f7"
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6dfb\u52a0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:add",
+                            "read:add"
                         ]
                     }
                 ]
@@ -99,13 +289,82 @@
                 ]
             }
         },
+        "/api/vehicle/add": {
+            "post": {
+                "tags": [
+                    "3-\u8f66\u8f86\u7ba1\u7406\u90e8\u5206\u63a5\u53e3"
+                ],
+                "summary": "3.1-\u6dfb\u52a0\u8f66\u8f86",
+                "description": "\u6dfb\u52a0\u8f66\u8f86(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)\u3002",
+                "operationId": "add",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Json\u683c\u5f0f",
+                        "required": true,
+                        "schema": {
+                            "example": {
+                                "price": "\u4ef7\u683c",
+                                "models": "\u8f66\u578b",
+                                "boarddateyear": "\u4e0a\u724c\u65e5\u671f\u5e74\u4efd",
+                                "boarddatemonth": "\u4e0a\u724c\u65e5\u671f\u6708\u4efd",
+                                "proddateyear": "\u51fa\u5382\u65e5\u671f\u5e74\u4efd",
+                                "proddatemonth": "\u51fa\u5382\u65e5\u671f\u6708\u4efd",
+                                "realmileage": "\u771f\u5b9e\u91cc\u7a0b",
+                                "condition": "\u8f66\u51b5\u63cf\u8ff0",
+                                "contacttel": "\u8054\u7cfb\u7535\u8bdd",
+                                "vehicleimgs": "\u8f66\u8f86\u7167\u7247json\u683c\u5f0f",
+                                "weixinimg": "\u5fae\u4fe1\u4e8c\u7ef4\u7801\u5730\u5740",
+                                "guideprice": "\u65b0\u8f66\u6307\u5bfc\u4ef7",
+                                "displacement": "\u6c7d\u8f66\u6392\u91cf",
+                                "configuration": "\u8f66\u8f86\u914d\u7f6e",
+                                "loc_province": "\u8f66\u8f86\u6240\u5728\u5730\u7701\u4efd",
+                                "loc_city": "\u8f66\u8f86\u6240\u5728\u5730\u57ce\u5e02",
+                                "loc_area": "\u8f66\u8f86\u6240\u5728\u5730\u533a\u57df",
+                                "transfer_times": "\u8fc7\u6237\u6b21\u6570",
+                                "fixprice": "\u4e00\u53e3\u4ef7",
+                                "status": "\u72b6\u6001",
+                                "popularity_index": "\u4eba\u6c14\u6307\u6570",
+                                "dial_index": "\u62e8\u53f7\u6307\u6570",
+                                "score": "\u4f1a\u5458\u79ef\u5206",
+                                "opr_user": "\u53d1\u5e03\u4eba\u5458\u7f16\u53f7"
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6dfb\u52a0\u8f66\u8f86\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/ApiResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:add",
+                            "read:add"
+                        ]
+                    }
+                ]
+            }
+        },
         "/api/vehicle/getvehicleinfo": {
             "post": {
                 "tags": [
-                    "3-\u8f66\u8f86\u7ba1\u7406\u90e8\u5206\u63a5\u53e3\uff0c\u53ef\u53ea\u4f20\u4e00\u4e2a\u53c2\u6570\uff0c\u83b7\u53d6\u6211\u53d1\u5e03\u7684\u8f66\u8f86\u4e5f\u662f\u5728\u8fd9\u91cc"
+                    "3-\u8f66\u8f86\u7ba1\u7406\u90e8\u5206\u63a5\u53e3"
                 ],
                 "summary": "3.2-\u83b7\u53d6\u8f66\u8f86\u4fe1\u606f",
-                "description": "\u83b7\u53d6\u8f66\u8f86\u4fe1\u606f(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)\u3002",
+                "description": "\u83b7\u53d6\u8f66\u8f86\u4fe1\u606f(\u4e3a\u5c0f\u7a0b\u5e8f\u4f7f\u7528)\u3002\u53ef\u53ea\u4f20\u4e00\u4e2a\u53c2\u6570\uff0c\u83b7\u53d6\u6211\u53d1\u5e03\u7684\u8f66\u8f86\u4e5f\u662f\u5728\u8fd9\u91cc",
                 "operationId": "getvehicleinfo",
                 "consumes": [
                     "application/json"
@@ -113,9 +372,24 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Json\u683c\u5f0f",
+                        "required": true,
+                        "schema": {
+                            "example": {
+                                "id": "\u8f66\u8f86id",
+                                "opr_user": "\u53d1\u5e03\u4eba\u5458\u7f16\u53f7"
+                            }
+                        },
+                        "type": "string"
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "",
+                        "description": "\u83b7\u53d6\u6210\u529f",
                         "schema": {
                             "$ref": "#/definitions/ApiResponse"
                         }
